[gd_scene load_steps=2 format=3 uid="uid://r17y5jtyoouh"]

[ext_resource type="Script" uid="uid://0ck0ca0aitsm" path="res://Scenes/Main/UI/Inventory/crafting_slot.gd" id="1_da0w5"]

[node name="CraftingSlot" type="PanelContainer"]
script = ExtResource("1_da0w5")

[node name="SlotMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemTexture" type="TextureRect" parent="SlotMargin"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipLayer" type="CanvasLayer" parent="."]

[node name="Delay" type="Timer" parent="TooltipLayer"]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
